--- a/CsharpLabs/DonorApplicationForm/MainPage.xaml
+++ b/CsharpLabs/DonorApplicationForm/MainPage.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DonorApplicationForm"
-    xmlns:ViewModels="using:DonorApplicationForm.ViewModels"
+    xmlns:DonorApplicationForm_ViewModels="using:DonorApplicationForm.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -26,16 +26,21 @@
                     <TextBox Header="Last Name" x:Name="LastName" Margin="0,10,0,0" HorizontalAlignment="Stretch" Text="{x:Bind ApplicationModel.AddPerson.LastName, UpdateSourceTrigger=LostFocus, Mode=TwoWay}" />
                     <ComboBox Header="Gender" PlaceholderText="Select" Width="200" ItemsSource="{x:Bind ApplicationModel.AddPerson.Gender.ItemList}" SelectedItem="{x:Bind ApplicationModel.AddPerson.Gender.ItemSelected, Mode=TwoWay}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,10,0,0">
                         <ComboBox.ItemTemplate>
-                            <DataTemplate x:DataType="ViewModels:GenderViewModel">
-                                <TextBlock Text="{x:Bind Title}"/>
+                            <DataTemplate x:DataType="DonorApplicationForm_ViewModels:GenderViewModel">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="/Images/Female.png" Width="16" Height="16" Visibility="{x:Bind FemaleIconVisible}"/>
+                                    <TextBlock Text="{x:Bind Title}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+                                </StackPanel>
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
                     <DatePicker Header="Date of Birth" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Center" Date="{x:Bind ApplicationModel.AddPerson.BirthDate.Date, Mode=TwoWay}" MinYear="{x:Bind ApplicationModel.AddPerson.BirthDate.MinValue}" MaxYear="{x:Bind ApplicationModel.AddPerson.BirthDate.MaxValue}"/>
                     <ComboBox Header="Blood Group" PlaceholderText="Select" Width="200" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,10,0,0" ItemsSource="{x:Bind ApplicationModel.AddPerson.BloodGroup.ItemList}" SelectedItem="{x:Bind ApplicationModel.AddPerson.BloodGroup.ItemSelected, Mode=TwoWay}">
                         <ComboBox.ItemTemplate>
-                            <DataTemplate x:DataType="ViewModels:BloodGroupViewModel">
-                                <TextBlock Text="{x:Bind Title}"/>
+                            <DataTemplate x:DataType="DonorApplicationForm_ViewModels:BloodGroupViewModel">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{x:Bind Title}"/>
+                                </StackPanel>
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
@@ -50,10 +55,13 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <StackPanel>
-                    <TextBlock Text="Donors list:" Style="{ThemeResource TitleTextBlockStyle}"/>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Donors count:"/>
-                        <TextBlock Text="{x:Bind ApplicationModel.Items.Count, Mode=OneWay}"/>
+                        <TextBlock Text="Donors count:" Style="{ThemeResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind ApplicationModel.Items.Count, Mode=OneWay}" Style="{ThemeResource TitleTextBlockStyle}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Filter:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                        <TextBox />
                     </StackPanel>
                     <ListView>
                         
