--- a/CsharpLabs/DonorApplicationForm/MainPage.xaml
+++ b/CsharpLabs/DonorApplicationForm/MainPage.xaml
@@ -63,8 +63,12 @@
                         <ComboBox Header="Blood Group" Margin="20,0,0,0" ItemsSource="{x:Bind ApplicationModel.DonorsList.BloodGroupFilter.ItemList}" SelectedItem="{x:Bind ApplicationModel.DonorsList.BloodGroupFilter.ItemSelected, Mode=TwoWay}" DisplayMemberPath="Title"/>
                     </StackPanel>
                 </StackPanel>
-                <ContentControl Grid.Row="1">
-                    <ListView ItemsSource="{x:Bind ApplicationModel.DonorsList.Items, Mode=OneWay}">
+                <Grid Grid.Row="1" Margin="0,0,11,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <ListView Grid.Column="0" ItemsSource="{x:Bind ApplicationModel.DonorsList.Items, Mode=OneWay}" SelectedItem="{x:Bind ApplicationModel.DonorsList.ItemSelected,Mode=TwoWay}">
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="DonorApplicationForm_ViewModels:PersonViewModel">
                                 <StackPanel Orientation="Horizontal">
@@ -76,7 +80,39 @@
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
-                </ContentControl>
+                    <ContentControl Grid.Column="1" Visibility="{x:Bind ApplicationModel.DonorsList.ItemSelectedVisibility, Mode=OneWay}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <StackPanel Grid.Row="0" Orientation="Vertical">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Selected Person:"/>
+                                    <TextBlock Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Title, Mode=OneWay}"/>
+                                </StackPanel>
+                                <Border BorderThickness="0,1,1,1" BorderBrush="DarkGreen" Margin="0,7,0,0">
+                                    <StackPanel Margin="0,0,7,7">
+                                        <TextBlock Text="New Donation" Style="{ThemeResource TitleTextBlockStyle}"/>
+                                        <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                            <TextBlock Text="At:" VerticalAlignment="Center"/>
+                                            <DatePicker Margin="5,0,0,0"/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                            <TextBlock Text="Mililiters:" VerticalAlignment="Center"/>
+                                            <TextBox Text=" " Margin="5,0,0,0"/>
+                                        </StackPanel>
+                                        <Button Content="Add" Margin="0,5,0,0" Width="75" HorizontalAlignment="Right"/>
+                                    </StackPanel>
+                                </Border>
+                                <TextBlock Text="Donations:" Margin="0,7,0,0" Style="{ThemeResource TitleTextBlockStyle}"/>
+                            </StackPanel>
+                            <ListView Grid.Row="1" ItemsSource="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.Items, Mode=OneWay}" DisplayMemberPath="Title">
+                                
+                            </ListView>
+                        </Grid>
+                    </ContentControl>
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
