--- a/CsharpLabs/DonorApplicationForm/MainPage.xaml
+++ b/CsharpLabs/DonorApplicationForm/MainPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <Grid Background="LightSeaGreen">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
@@ -55,7 +55,7 @@
                 </Grid.RowDefinitions>
                 <StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Donors count:" Style="{ThemeResource TitleTextBlockStyle}"/>
+                        <TextBlock Text="Donors count :" Style="{ThemeResource TitleTextBlockStyle}"/>
                         <TextBlock Text="{x:Bind ApplicationModel.DonorsList.Count, Mode=OneWay}" Style="{ThemeResource TitleTextBlockStyle}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
@@ -88,23 +88,21 @@
                             </Grid.RowDefinitions>
                             <StackPanel Grid.Row="0" Orientation="Vertical">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Selected Person:"/>
+                                    <TextBlock Text="Selected Person : "/>
                                     <TextBlock Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Title, Mode=OneWay}"/>
                                 </StackPanel>
-                                <Border BorderThickness="0,1,1,1" BorderBrush="DarkGreen" Margin="0,7,0,0">
-                                    <StackPanel Margin="0,0,7,7">
-                                        <TextBlock Text="New Donation" Style="{ThemeResource TitleTextBlockStyle}"/>
-                                        <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                            <TextBlock Text="At:" VerticalAlignment="Center"/>
-                                            <DatePicker Margin="5,0,0,0" Date="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.At, Mode=TwoWay}"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                            <TextBlock Text="Mililiters:" VerticalAlignment="Center"/>
-                                            <TextBox Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Mililiters, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0,0,0"/>
-                                        </StackPanel>
-                                        <Button Content="Add" Margin="0,5,0,0" Width="75" HorizontalAlignment="Right" Click="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Add}"/>
+                                <StackPanel Margin="0,0,7,7">
+                                    <TextBlock Text="New Donation" Style="{ThemeResource TitleTextBlockStyle}"/>
+                                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                        <TextBlock Text="At:" VerticalAlignment="Center"/>
+                                        <DatePicker Margin="5,0,0,0" Date="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.At, Mode=TwoWay}"/>
                                     </StackPanel>
-                                </Border>
+                                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                        <TextBlock Text="Mililiters:" VerticalAlignment="Center"/>
+                                        <TextBox Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Mililiters, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0,0,0"/>
+                                    </StackPanel>
+                                    <Button Content="Add" Margin="0,5,0,0" Width="75" HorizontalAlignment="Right" Click="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Add}"/>
+                                </StackPanel>
                                 <TextBlock Text="Donations:" Margin="0,7,0,0" Style="{ThemeResource TitleTextBlockStyle}"/>
                             </StackPanel>
                             <ListView Grid.Row="1" ItemsSource="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.Items, Mode=OneWay}" DisplayMemberPath="Title">
