--- a/CsharpLabs/DonorApplicationForm/MainPage.xaml
+++ b/CsharpLabs/DonorApplicationForm/MainPage.xaml
@@ -20,7 +20,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Border HorizontalAlignment="Left" BorderBrush="DarkGreen" BorderThickness="3" Margin="8" Padding="8">
+            <Border HorizontalAlignment="Left" BorderBrush="DarkGreen" BorderThickness="1" Margin="8,0,8,8" Padding="8">
                 <StackPanel Orientation="Vertical" DataContext="{Binding AddPerson}">
                     <TextBlock Text="Add New" Style="{ThemeResource TitleTextBlockStyle}"/>
                     <TextBox Header="First Name" x:Name="FistName" Margin="0,10,0,0" HorizontalAlignment="Stretch" Text="{x:Bind ApplicationModel.AddPerson.FirstName, UpdateSourceTrigger=LostFocus, Mode=TwoWay}" />
@@ -55,64 +55,74 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Donors count :" Style="{ThemeResource TitleTextBlockStyle}"/>
-                        <TextBlock Text="{x:Bind ApplicationModel.DonorsList.Count, Mode=OneWay}" Style="{ThemeResource TitleTextBlockStyle}"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBox  Header="Name" Width="100" Text="{x:Bind ApplicationModel.DonorsList.NameFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        <ComboBox Header="Blood Group" Margin="20,0,0,0" ItemsSource="{x:Bind ApplicationModel.DonorsList.BloodGroupFilter.ItemList}" SelectedItem="{x:Bind ApplicationModel.DonorsList.BloodGroupFilter.ItemSelected, Mode=TwoWay}" DisplayMemberPath="Title"/>
-                    </StackPanel>
-                </StackPanel>
-                <Grid Grid.Row="1" Margin="0,0,11,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <ListView Grid.Column="0" ItemsSource="{x:Bind ApplicationModel.DonorsList.Items, Mode=OneWay}" SelectedItem="{x:Bind ApplicationModel.DonorsList.ItemSelected,Mode=TwoWay}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="DonorApplicationForm_ViewModels_DonorsListModels:PersonViewModel">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="{x:Bind Title}" VerticalAlignment="Center"/>
-                                    <Button Margin="5,0,0,0" Click="{x:Bind Remove}">
-                                        <Image Source="/Images/icons8-cancel-32.png" Width="16" Height="16" />
-                                    </Button>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                    <ContentControl Grid.Column="1" Visibility="{x:Bind ApplicationModel.DonorsList.ItemSelectedVisibility, Mode=OneWay}">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <StackPanel Grid.Row="0" Orientation="Vertical">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Selected Person : "/>
-                                    <TextBlock Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Title, Mode=OneWay}"/>
-                                </StackPanel>
-                                <StackPanel Margin="0,0,7,7">
-                                    <TextBlock Text="New Donation" Style="{ThemeResource TitleTextBlockStyle}"/>
-                                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                        <TextBlock Text="At:" VerticalAlignment="Center"/>
-                                        <DatePicker Margin="5,0,0,0" Date="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.At, Mode=TwoWay}"/>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                        <TextBlock Text="Mililiters:" VerticalAlignment="Center"/>
-                                        <TextBox Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Mililiters, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0,0,0"/>
-                                    </StackPanel>
-                                    <Button Content="Add" Margin="0,5,0,0" Width="75" HorizontalAlignment="Right" Click="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Add}"/>
-                                </StackPanel>
-                                <TextBlock Text="Donations:" Margin="0,7,0,0" Style="{ThemeResource TitleTextBlockStyle}"/>
+                <StackPanel Orientation="Horizontal">
+                    <Border BorderBrush="DarkGreen" BorderThickness="1,1,1,0"  HorizontalAlignment="Left">
+                        <StackPanel Margin="10,10,10,10">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="Donors filter (" Style="{ThemeResource TitleTextBlockStyle}"/>
+                                <TextBlock Text="{x:Bind ApplicationModel.DonorsList.Count, Mode=OneWay}" Style="{ThemeResource TitleTextBlockStyle}"/>
+                                <TextBlock Text="items)" Margin="5,0,0,0" Style="{ThemeResource TitleTextBlockStyle}"/>
                             </StackPanel>
-                            <ListView Grid.Row="1" ItemsSource="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.Items, Mode=OneWay}" DisplayMemberPath="Title">
-                                
-                            </ListView>
-                        </Grid>
-                    </ContentControl>
-                </Grid>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBox  Header="Name" Width="100" Text="{x:Bind ApplicationModel.DonorsList.NameFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                <ComboBox Header="Blood Group" Margin="20,0,0,0" ItemsSource="{x:Bind ApplicationModel.DonorsList.BloodGroupFilter.ItemList}" SelectedItem="{x:Bind ApplicationModel.DonorsList.BloodGroupFilter.ItemSelected, Mode=TwoWay}" DisplayMemberPath="Title"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                    <Image Source="/Images/12pr_pmgh.png" Width="200" Height="111" Margin="20,0,0,0" />
+                </StackPanel>
+                <Border Grid.Row="1" Margin="0,0,11,0" BorderBrush="DarkGreen" BorderThickness="1">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <ListView Grid.Column="0" ItemsSource="{x:Bind ApplicationModel.DonorsList.Items, Mode=OneWay}" SelectedItem="{x:Bind ApplicationModel.DonorsList.ItemSelected,Mode=TwoWay}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="DonorApplicationForm_ViewModels_DonorsListModels:PersonViewModel">
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{x:Bind Title}" VerticalAlignment="Center"/>
+                                        <Button Margin="5,0,0,0" Click="{x:Bind Remove}">
+                                            <Image Source="/Images/icons8-cancel-32.png" Width="16" Height="16" />
+                                        </Button>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                        <ContentControl Grid.Column="1" Visibility="{x:Bind ApplicationModel.DonorsList.ItemSelectedVisibility, Mode=OneWay}">
+                            <Border BorderBrush="DarkGreen" BorderThickness="1" Margin="5">
+                                <Grid Margin="11">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <StackPanel Grid.Row="0" Orientation="Vertical">
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Selected Person : "/>
+                                            <TextBlock Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Title, Mode=OneWay}"/>
+                                        </StackPanel>
+                                        <StackPanel Margin="0,0,7,7">
+                                            <TextBlock Text="New Donation" Style="{ThemeResource TitleTextBlockStyle}"/>
+                                            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                                <TextBlock Text="At:" VerticalAlignment="Center"/>
+                                                <DatePicker Margin="5,0,0,0" Date="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.At, Mode=TwoWay}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                                <TextBlock Text="Mililiters:" VerticalAlignment="Center"/>
+                                                <TextBox Text="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Mililiters, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0,0,0"/>
+                                            </StackPanel>
+                                            <Button Content="Add" Margin="0,5,0,0" Width="75" HorizontalAlignment="Right" Click="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.AddForm.Add}"/>
+                                        </StackPanel>
+                                        <TextBlock Text="Donations:" Margin="0,7,0,0" Style="{ThemeResource TitleTextBlockStyle}"/>
+                                    </StackPanel>
+                                    <ListView Grid.Row="1" ItemsSource="{x:Bind ApplicationModel.DonorsList.ItemSelected.Donations.Items, Mode=OneWay}" DisplayMemberPath="Title">
+
+                                    </ListView>
+                                </Grid>
+                            </Border>
+                        </ContentControl>
+                    </Grid>
+                </Border>
             </Grid>
         </Grid>
     </Grid>
